--- a/EasyWeather/MainPage.xaml
+++ b/EasyWeather/MainPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:d="http://xamarin.com/schemas/2014/forms/design" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="EasyWeather.MainPage">
     <StackLayout>
-        <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" />
+        <Entry Placeholder="Enter City" x:Name="City" ></Entry>
+        <Button Clicked="Button_Clicked" Text="Submit" x:Name="SubmitCity"></Button>
+        <Label x:Name="LabelData"></Label>
     </StackLayout>
 </ContentPage>
